# avograde

./: .gitignore  DEPLOY.md  Dockerfile  README.md  drift_demo.py  fallback_demo.py  grade_one.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
src/avograde/: __init__.py  alerting.py  batch.py  config.py  demo.py  eval.py  features.py  train.py
src/avograde/models/: grader_cnn.py
src/avograde/monitoring/: drift.py
src/avograde/serving/: app.py  baseline.py  service.py
tests/: test_drift.py  test_labels.py  test_models.py  test_service.py  test_splits.py
